@@ -6,10 +6,14 @@ from slumber.fields import RemoteForeignKey
 class Shop(models.Model):
     name = models.fields.CharField(max_length=200)
     slug = models.fields.CharField(max_length=20, unique=True, blank=False)
+    active = models.fields.NullBooleanField()
 
     @property
     def web_address(self):
         return 'http://www.example.com/%s/' % self.slug
+
+    def __unicode__(self):
+        return self.name
 
 
 class Pizza(models.Model):
