@@ -1,5 +1,6 @@
 2012-04-29  Kirit Saelensminde  <kirit@felspar.com>
  The conversion of types to JSON no longer takes a request as the first parameter. This allows objects to be converted without having to do it within the context of a request.
+ Added JSON handler for the server side of the field type NullBooleanField.
 
 2012-04-18  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a problem where forwarded authentication could lead to an infinite recursion error.
